Cleaned up some Javascript functionality  * refactored the setfocus function from application_helper.rb to application.js  * moved the javascript load to the end of the page instead of the beginning

--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,46 +1,39 @@
 <% content_for :left do %>
   <%# This is an Internet Explorer workaround ...sigh... %>
-	&nbsp;
+  &nbsp;
 <% end %>
 
 <%= error_messages_for :user, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
 <div class='box span-13 last'>
   <% form_for @user, :url => account_path do |f| %>
-		<div class='spacer'>
-		  <%= content_tag( :h1, "Account Information" ) %>
-		</div>
+    <fieldset>
+      <%= content_tag( :h1, "Account Information" ) %>
 
-		<label><span>Login ID</span>
-			<%= f.text_field :login, :disabled => true %>
-		</label>
+      <%= f.label :login %>
+      <%= f.text_field :login, :disabled => true %>
+      <br />
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name, :disabled => true %>
+      <br />
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name, :disabled => true %>
+      <br />
+      <%= f.label :email%>
+      <%= f.text_field :email, :id => "email", :class => "focus" %>
+      <br />
+      <%= content_tag :label, f.object.new_record? ? 'Password' : 'Change password',
+        !f.object.new_record? ? nil : :class=>'required' %>
+      <%= f.password_field :password %>
+      <br />
+      <%= content_tag :label, 'Confirm password', !f.object.new_record? ? nil : :class=>'required' %>
+      <%= f.password_field :password_confirmation %>
 
-		<label><span>First Name</span>
-  		<%= f.text_field :first_name, :disabled => true %>
-		</label>
 
-		<label><span>Last Name</span>
-  		<%= f.text_field :last_name, :disabled => true %>
-		</label>
-
-		<label><span>Email Address</span>
-  		<%= f.text_field :email, :id => 'email' %>
-		</label>
-
-		<label><%= content_tag :span, f.object.new_record? ? 'Password' : 'Change password', 
-		              !f.object.new_record? ? nil : :class=>'required' %>
-			<%= f.password_field :password %>
-		</label>
-		
-		<label><%= content_tag :span, 'Confirm password', !f.object.new_record? ? nil : :class=>'required' %>
-			<%= f.password_field :password_confirmation %>
-		</label>
-
-		<div class='spacer'>
-			<%= f.submit 'Save', :class=> 'btn positive' %>
-			<%= link_to 'Cancel', '/', :class => 'btn standard' %>
-		</div>
+      <div class='spacer'>
+        <%= f.submit 'Save', :class=> 'btn positive' %>
+        <%= link_to 'Cancel', '/', :class => 'btn standard' %>
+      </div>
+    </fieldset>
   <% end %>
 </div>
-
-<%= set_focus_to_id 'email' %>
