--- a/app/views/settings/supporting_skill_categories/edit.html.erb
+++ b/app/views/settings/supporting_skill_categories/edit.html.erb
@@ -9,7 +9,7 @@
     <fieldset>
 
       <%= f.label :name, {}, :class => 'req' %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, :class => "focus" %>
 
       <div class='spacer last'>
         <%= submit_tag 'Update', :class => 'btn positive' %>
