--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -17,7 +17,7 @@
       <%= f.hidden_field :course_term_id, :value => @course_term.id %>
 
       <%= f.label :name, {}, :class => 'req' %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, :class => "focus" %>
       <br />
       <%= f.label :possible_points, {}, :class => 'req' %>
       <%= f.text_field :possible_points %>
@@ -40,8 +40,6 @@
     </fieldset>
   <% end %>
 </div>
-
-<%= set_focus_to_id 'assignment_name' %>
 
 <% javascript_tag do %>
   due_date = new scal('due_date', 'assignment_due_date', {closebutton: ''});
