--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,6 @@
 
     <%= stylesheet_link_tag 'menu', 'tabs', 'local' -%>
 
-    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype.js" -%>
-    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous.js" -%>
-    <%= javascript_include_tag 'livepipe', 'tabs', 'slider' -%>
-    <%= javascript_include_tag "tablekit" -%>
-
-    <script>
-      TableKit.options.rowEvenClass = 'even';
-      TableKit.options.rowOddClass = 'odd';
-    </script>
-
     <%= @content_for_page_header -%>
 
   </head>
@@ -64,5 +54,14 @@
       </div>
     </div>
 
+    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype.js" -%>
+    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous.js" -%>
+    <%= javascript_include_tag 'livepipe', 'tabs', 'slider' -%>
+    <%= javascript_include_tag "tablekit" -%>
+    <% javascript_include_tag do %>
+      TableKit.options.rowEvenClass = 'even';
+      TableKit.options.rowOddClass = 'odd';
+    <% end %>
+    <%= javascript_include_tag "application" -%>
   </body>
 </html>
