--- a/app/views/settings/assignment_categories/edit.html.erb
+++ b/app/views/settings/assignment_categories/edit.html.erb
@@ -10,7 +10,7 @@
       <legend>Assignment Type</legend>
       
       <%= f.label :name, {}, :class => 'req' %>
-		  <%= f.text_field :name %>
+		  <%= f.text_field :name, :class => "focus" %>
 			
 	    <div class="spacer">
 		    <%= submit_tag 'Save', :class => 'btn positive' %>
