--- a/app/views/settings/grading_scales/edit.html.erb
+++ b/app/views/settings/grading_scales/edit.html.erb
@@ -10,7 +10,7 @@
       <legend>Grading Scales</legend>
 
       <%= f.label :name, {}, :class => 'req' %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, :class => "focus" %>
       <br />
       
       <label>
@@ -32,5 +32,3 @@
     
 <% end %>
 </div>
-
-<%= set_focus_to_id 'grading_scale_name' %>
