--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -2,37 +2,38 @@
 
 <table id="users" class="master">
   <thead>
-  	<tr>
-    <th>Login</th>
-    <% form_for users.class.to_s, :html => { :method => :get } do |s| %>
-	    <th>Name <%= text_field_tag :search, params[:search], :size => 10, :class => 'search' %></th>
-	  <% end %>
-    <th>Email Address</th>
-    <th>Campus</th>
-		<%= content_tag(:th, 'Class-Of') if user_type == 'Student' %>
-		<%= content_tag(:th, 'Homeroom') if user_type == 'Student' %>
-		<th width='1'></th>
-	  </tr>
+    <tr>
+      <th>Login</th>
+      <% form_for users.class.to_s, :html => { :method => :get } do |s| %>
+        <th>Name <%= text_field_tag :search,
+            params[:search],
+            :size => 10,
+            :class => "focus search" %></th>
+        <% end %>
+      <th>Email Address</th>
+      <th>Campus</th>
+      <%= content_tag(:th, 'Class-Of') if user_type == 'Student' %>
+      <%= content_tag(:th, 'Homeroom') if user_type == 'Student' %>
+      <th width='1'></th>
+    </tr>
   </thead>
-	<tbody>
-		<% for u in users %>
-			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for(u)+'/edit' %>'">
-				<%= content_tag :td, u.login %>
-				<td width='50%'><%= link_to u.full_name, url_for(u)+'/edit' %></td>
-				<%= content_tag :td, u.email %>
-				<%= content_tag :td, u.site.name %>
-				<%= content_tag(:td, u.class_of) if user_type == 'Student' %>
-				<%= content_tag(:td, u.homeroom) if user_type == 'Student' %>
-				<td><%= button_to 'Delete', u, :method => :delete, 
-				        :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?",
-				        :class => 'btn negative' %></td>
-			</tr>
-		<% end %>
+  <tbody>
+    <% for u in users %>
+      <tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for(u)+'/edit' %>'">
+        <%= content_tag :td, u.login %>
+        <td width='50%'><%= link_to u.full_name, url_for(u)+'/edit' %></td>
+        <%= content_tag :td, u.email %>
+        <%= content_tag :td, u.site.name %>
+        <%= content_tag(:td, u.class_of) if user_type == 'Student' %>
+        <%= content_tag(:td, u.homeroom) if user_type == 'Student' %>
+        <td><%= button_to 'Delete', u, :method => :delete,
+            :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?",
+            :class => 'btn negative' %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
 <span class="paginate">
-	<%= will_paginate users %>
+  <%= will_paginate users %>
 </span>
-
-<%= set_focus_to_id 'search' %>
