Intense rework of the Skills Evaluation sections.  * reworked the DB schema  * moved some javascript around for page load time optimization

--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -46,6 +46,6 @@
   </div>
 <% end %>
 
-<% javascript_tag do %>
-  new Control.Tabs('course_tabs');
-<% end -%>
+<% content_for :page_footer do %>
+  <%= javascript_tag "new Control.Tabs('course_tabs');" %>
+<% end %>
