--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,5 +63,7 @@
       TableKit.options.rowOddClass = 'odd';
     <% end %>
     <%= javascript_include_tag "application" -%>
+
+    <%= @content_for_page_footer -%>
   </body>
 </html>
