--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -5,16 +5,14 @@
 <ul id="evaluations" class="subsection_tabs">
   <li class="tab"><a href="#assignments">Assignments</a></li>  
   <li class="tab"><a href="#skills">Supporting Skills</a></li>  
-  <li class="tab"><a href="#comments">Comments</a></li>  
+  <li class="tab hidden"><a href="#comments">Comments</a></li>
 </ul>
 
 <div id="assignments"><%= render :partial => "grades" %></div>
 <div id="skills"><%= render :partial => "skills" %></div>
-<div id="comments"><%= render :partial => "comments" %></div>
+<div id="comments" class="hidden"><%#= render :partial => "comments" %></div>
 
-<% javascript_tag do %>
-  // instantiate the tabbed interface
-  new Control.Tabs('evaluations');
-<% end -%>
-
-<%= javascript_tag render( :partial => "form_control.js") %>
+<% content_for :page_footer do %>
+  <%#= javascript_tag "new Control.Tabs('evaluations');" -%>
+  <%= javascript_tag render( :partial => "form_control.js") %>
+<% end %>
