--- a/app/views/evaluations/_skills.html.erb
+++ b/app/views/evaluations/_skills.html.erb
@@ -1,7 +1,7 @@
 <% skills = @course_term.supporting_skills %>
 
-<form id='skill_grid'>
-  <table class='skill-grid sortable scroll master'>
+<form id="skill_grid">
+  <table class="skill-grid sortable scroll master">
     <thead>
       <tr>
         <th>Student Name</th>
