--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,10 +1,9 @@
 <% content_for :page_header do %>
   <%= stylesheet_link_tag 'mycal' -%>
-  <%= javascript_include_tag 'scal' -%>
 <% end %>
 
 <% content_for :left do %>
-	<%= show_course_term_list %>
+  <%= show_course_term_list %>
 <% end %>
 
 <%= error_messages_for :assignment, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
@@ -41,9 +40,15 @@
   <% end %>
 </div>
 
-<% javascript_tag do %>
-  due_date = new scal('due_date', 'assignment_due_date', {closebutton: ''});
-  default_due_date = new Date ($('default_due_date').readAttribute('value'));
-  due_date.setCurrentDate(default_due_date);
+<% content_for :page_footer do %>
+  <% javascript_tag do %>
+    function updateDueDate(d) {
+      // Convert this date to a valid timestamp and push it into the assignment due date
+      $('assignment_due_date').value = d.format('yyyy-mm-dd 00:00:01');
+    }
+    due_date = new scal('due_date', updateDueDate, {closebutton: ''});
+    default_due_date = new Date ($('default_due_date').readAttribute('value'));
+    due_date.setCurrentDate(default_due_date);
+  <% end %>
 <% end %>
 
