--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 
     <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype.js" -%>
     <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous.js" -%>
-    <%= javascript_include_tag 'livepipe', 'tabs', 'slider' -%>
+    <%= javascript_include_tag 'livepipe', 'tabs', 'slider', 'scal' -%>
     <%= javascript_include_tag "tablekit" -%>
     <% javascript_include_tag do %>
       TableKit.options.rowEvenClass = 'even';
