slight rework of school_years views to allow for adding new school years

--- a/app/views/settings/school_years/_term.erb
+++ b/app/views/settings/school_years/_term.erb
@@ -3,7 +3,7 @@
     <% @term = term %>
     <%= error_messages_for :term %>
 
-    <%= t.label :name %>
+    <%= t.label :name, "Grading Period Name" %>
     <%= t.text_field :name %>
     <br />
     <%= t.label :begin_date %>
