--- a/app/views/settings/school_years/new.html.erb
+++ b/app/views/settings/school_years/new.html.erb
@@ -12,7 +12,7 @@
     <fieldset>
       <legend>School Year</legend>
 
-      <%= f.label :name, {}, :class => 'req' %>
+      <%= f.label :name, "School Year Name", :class => 'req' %>
       <%= f.text_field :name %>
       <br />
 
