--- a/app/views/settings/school_years/edit.html.erb
+++ b/app/views/settings/school_years/edit.html.erb
@@ -2,7 +2,7 @@
   <%= render :partial => 'settings/settings_list' %>
 <% end %>
 
-<%= error_messages_for :school_year, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
+<%= error_messages_for :grading_period, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
 <div class='box span-13'>
   <% form_for @year, :url => { :action => "update", :controller => "school_years" } do |f| %>
@@ -11,7 +11,7 @@
     <fieldset>
       <legend>School Year</legend>
 
-      <%= f.label :name, {}, :class => 'req' %>
+      <%= f.label :name, "School Year Name", {}, :class => 'req' %>
       <%= f.text_field :name %>
       <br />
 
