--- a/app/views/settings/school_years/edit.html.erb
+++ b/app/views/settings/school_years/edit.html.erb
@@ -11,7 +11,7 @@
     <fieldset>
       <legend>School Year</legend>
 
-      <%= f.label :name, "School Year Name", {}, :class => 'req' %>
+      <%= f.label :name, "School Year Name", :class => 'req' %>
       <%= f.text_field :name %>
       <br />
 
