cleaned up grading scale editing

--- a/app/views/settings/grading_scales/edit.html.erb
+++ b/app/views/settings/grading_scales/edit.html.erb
@@ -7,9 +7,7 @@
 <div class='box span-15 last'>
   <% form_for @scale do |f| %>
     <fieldset>
-      <legend>Grading Scales</legend>
-
-      <%= f.label :name, {}, :class => 'req' %>
+      <%= f.label :name, "Grading Scale Name", :class => 'req' %>
       <%= f.text_field :name, :class => "focus" %>
       <br />
       
