Removed the email address requirement.  * Some users may not have one to use  * We will re-evaluate this in the future as we implement communication between teachers & student/parents

--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -16,7 +16,7 @@
       <%= f.label :last_name, {}, :class => 'req' %>
       <%= f.text_field :last_name, :class => 'input' %>
 
-      <%= f.label :email, {}, :class => 'req' %>
+      <%= f.label :email, {}, :class => '' %>
       <%= f.text_field :email, :class=>'input' %>
 
       <label><%= content_tag :span, f.object.new_record? ? 'Password' : 'Change password',
