Implemented site default settings  * you can now change the site name and tag line from the settings menu  * cleaned up some extranious code / files

--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -1,9 +1,10 @@
 <% items = [
 		{:name => 'Assignment Types', :url => '/settings/assignment_categories'},
 		{:name => 'Campus Sites', :url => '/settings/sites'},
-		{:name => 'Import Data', :url => '/settings/imports'},
 		{:name => 'Grading Periods', :url => '/settings/grading_periods'},
 		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
+		{:name => 'Import Data', :url => '/settings/imports'},
+		{:name => 'Site Defaults', :url => '/settings/site_defaults'},
     {:name => 'Supporting Skills', :url => '/settings/supporting_skill_categories'},
 		{:name => 'Supporting Skill Codes', :url => '/settings/supporting_skill_codes'}]
 #		{:name => 'School Calendar', :url => '/settings/events'}]
