--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -2,14 +2,11 @@
 	<%= render :partial => 'settings_list' %>
 <% end %>
 
-<h2>My Settings</h2>
+<h2>Administrator Settings</h2>
 
-<p>This screen allows you to customize <%= StaticData.site_name %> for your own needs.  You can
-change sorting options, display colors, etc.</p>
-
-<p>Administrators use this screen to configure <%= StaticData.site_name %> for the whole school.
-Configuring the school year, building grading scales, and changing the site name
-are some of the things you can do from this screen.</p>
+<p>This page is used to configure the whole site the way you like it.
+Setting the school year and grading periods, building grading scales, and
+changing the site name are just some of the things you can do.</p>
 
 <p>Choose one of the options from the menu on the left side of the screen to 
 continue.</p>
