--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -11,12 +11,8 @@
       <% @courses.each do |course| %>
         <tr class="<%= cycle('even', 'odd') + (current_page?(:id => course) ? ' current' : '') %>"
             onclick="location.href='<%= url_for( :action => "edit", :id => course.id ) %>'" >
-          <td>
-            <%= link_to( course.name, :action => "edit", :id => course.id ) %>
-          </td>
-          <td>
-            <%= course.terms[0].school_year.name  %>
-          </td>
+          <%= content_tag :td, link_to( course.name, :action => "edit", :id => course.id ) %>
+          <%= content_tag :td, course.terms[0].school_year.name  %>
         </tr>
       <% end %>
     </tbody>
