restrict the course-terms shown in the sidebar to only active terms.  Closes #3

--- a/app/views/shared/_course_term_list.html.erb
+++ b/app/views/shared/_course_term_list.html.erb
@@ -8,6 +8,7 @@
     </thead>
     <tbody>
       <% @courses.each do |course| %>
+        <% course.course_terms.delete_if {|ct| !ct.active } %>
         <% course.course_terms.sort{|a,b| a.term.end_date <=> b.term.end_date}.each do |ct| %>
           <tr class="<%= cycle('even', 'odd') + (current_page?(:id => ct) ? ' current' : '') %>"
               onclick="location.href='<%= url_for( :action => "show", :id => ct.id ) %>'" >
