Minor report cleanup  * Grrrr...it looks like the NetBeans code completion 'feature' borked my code.  Grr!  * Added a 'school_year' paramater to Course  * Removed some deprecated Prawn methods

--- a/app/views/reports/_report_list.erb
+++ b/app/views/reports/_report_list.erb
@@ -1,12 +1,12 @@
 <% reports = Report.all() %>
-<table>
+<table class="master">
   <thead>
     <tr>
       <th>Reports</th>
     </tr>
   </thead>
   <tbody>
-    <% reports.delete_if{ |r| r.include?(:restricted) } unless current_user.is_admin? %>
+    <% reports.delete_if{ |r| r.restricted } unless current_user.is_admin? %>
     <% reports.each do |r| %>
       <tr class="<%= cycle('odd', 'even')%>">
         <td><%= link_to r.menuname, "/reports/#{r.name}" %></td>
