My Grades rework  * My Grades now works properly  * The Index view shows an overall picture of the students progress  * The Show view displays a detailed picture of each course  * Also added some delegates to clean up the view code

--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -7,12 +7,14 @@
       </tr>
     </thead>
     <tbody>
-      <tr><td colspan='0'><%= link_to 'Add New Course', new_course_path, :class=>'btn standard' %></td></tr>
+      <% if current_page?(:controller => "courses") %>
+        <tr><td colspan='0'><%= link_to 'Add New Course', new_course_path, :class=>'btn standard' %></td></tr>
+      <% end %>
       <% @courses.each do |course| %>
         <tr class="<%= cycle('even', 'odd') + (current_page?(:id => course) ? ' current' : '') %>"
             onclick="location.href='<%= url_for( :action => "edit", :id => course.id ) %>'" >
-          <%= content_tag :td, link_to( course.name, :action => "edit", :id => course.id ) %>
-          <%= content_tag :td, course.terms[0].school_year.name  %>
+              <%= content_tag :td, link_to( course.name, :action => "edit", :id => course.id ) %>
+              <%= content_tag :td, course.terms[0].school_year.name  %>
         </tr>
       <% end %>
     </tbody>
