--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,11 +54,11 @@
       </div>
     </div>
 
-    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype.js" -%>
-    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous.js" -%>
+    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype" -%>
+    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous" -%>
     <%= javascript_include_tag 'livepipe', 'tabs', 'slider', 'scal' -%>
     <%= javascript_include_tag "tablekit" -%>
-    <% javascript_include_tag do %>
+    <% javascript_tag do %>
       TableKit.options.rowEvenClass = 'even';
       TableKit.options.rowOddClass = 'odd';
     <% end %>
