--- a/app/views/settings/school_years/_term.erb
+++ b/app/views/settings/school_years/_term.erb
@@ -15,6 +15,6 @@
     <%= t.label :active %>
     <%= t.check_box :active %>
     <br />
-    <%= link_to_function "remove", "this.up('.term').remove()", :style=>"float:right;" %>
+    <%= link_to_function "remove", "this.up('.term').remove()", :class => 'btn standard right' %>
 <% end %>
 </div>
