StaticData rework and testing  * Added a new test for Site Defaults  * DRYed up the StaticData model / controller  * Tweaked several integration tests

--- a/app/views/settings/site_defaults/index.html.erb
+++ b/app/views/settings/site_defaults/index.html.erb
@@ -2,27 +2,23 @@
   <%= render :partial => 'settings/settings_list' %>
 <% end %>
 
-<%= error_messages_for "site_defaults",
-  :header_message => "The following records did not pass validation:",
-  :message => 'Please correct these problems and try again' %>
-
 <div class='box span-13 prepend-5 last'>
   <% form_for :site_default do |f| -%>
     <label>Site Name:</label><br />
     <input type='hidden' name='update_type' value='site_name' />
-    <%= f.text_field :site_name, :value => StaticData.site_name -%>
+    <%= f.text_field :new_value, :id => "site_name", :value => StaticData.site_name -%>
 
-    <%= submit_tag 'Change', :class => 'btn standard' -%>
+    <%= submit_tag 'Change', :id => "change_site_name", :class => 'btn standard' -%>
   <% end -%>
 </div>
 
 <div class='box span-13 prepend-5 last'>
   <% form_for :site_default do |f| -%>
     <label>Site Tag Line:</label><br />
-    <input type='hidden' name='update_type' value='site_tag' />
-    <%= f.text_field :site_tag, :value => StaticData.tag_line -%>
+    <input type='hidden' name='update_type' value='tag_line' />
+    <%= f.text_field :new_value, :id => "tag_line", :value => StaticData.tag_line -%>
 
-    <%= submit_tag 'Change', :class => 'btn standard' -%>
+    <%= submit_tag 'Change', :id => "change_tag_line", :class => 'btn standard' -%>
   <% end -%>
 </div>
 
