--- a/app/views/courses/_students_tab.html.erb
+++ b/app/views/courses/_students_tab.html.erb
@@ -2,7 +2,8 @@
   <div  style="overflow-y:scroll; height:250px;">
     <div class='span-4'>
       <form id='class_of_form'>
-        <%= select_tag 'class_of', options_for_select(class_range.insert(0, 'Class Of ...'), ' '),
+        <% classes_of = Student.find_classes_of.map{|c| c.class_of } %>
+        <%= select_tag 'class_of', options_for_select(classes_of.insert(0, 'Class Of ...'), ' '),
           :onchange =>
           remote_function(
           :update => 'student_list',
